Implement Signup/Login feature and searchbar in community board